# MolecularGraph.jl_notebook

./: .gitignore  Manifest.toml  Project.toml  README.md  pyproject.toml
Pluto/: Project.toml  drawing_molecule.jl  getting_started.jl  mass_and_isotopes.jl  maximum_common_substructure.jl  molecular_graph_basics.jl  preprocessing.jl  properties_and_descriptors.jl  stereochemistry.jl  substructure_and_query.jl
benchmarking/: Project.toml  docker-compose.yml  mg_perf.jl  mg_test.jl  pyproject.toml  rdkit_mcs.ipynb  test.jl
docs/: drawing_molecule.html  drawing_molecule.jl.html  getting_started.html  getting_started.jl.html  mass_and_isotopes.html  mass_and_isotopes.jl.html  maximum_common_substructure.html  maximum_common_substructure.jl.html  molecular_graph_basics.html  molecular_graph_basics.jl.html  preprocessing.html  preprocessing.jl.html  properties_and_descriptors.html  properties_and_descriptors.jl.html  stereochemistry.html  stereochemistry.jl.html  stereochenistry.jl.html  substructure_and_query.html  substructure_and_query.jl.html
notebook/: calculateDescriptors.ipynb  calculateDescriptors.md  gettingStarted.ipynb  gettingStarted.md  massAndIsotopes-gadfly.ipynb  massAndIsotopes-gadfly.md  massAndIsotopes-plotly.ipynb  massAndIsotopes-plotly.md  massAndIsotopes.ipynb  massAndIsotopes.md  mcs.ipynb  mcs.md  molecularGraphBasics.ipynb  molecularGraphBasics.md  preprocess.ipynb  preprocess.md  substructureSearch.ipynb  substructureSearch.md
notebook_v0_13/: calculateDescriptors.ipynb  massAndIsotopes.ipynb  massAndIsotopes.md  mcs.ipynb  preprocess.md  (+2 more)
(+18 files in other folders)
