[tool.poetry]
name = "MolecularGraph.jl_notebook"
version = "0.1.0"
description = ""
authors = ["smatsuoka <ms0ae8ti1sj2ui@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.4"
jupyter = "^1.0.0"
jupytext = "^1.4.2"
jupyter_contrib_nbextensions = "^0.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
