[tool.poetry]
name = "MolecularGraph.jl_notebook"
version = "0.1.0"
description = ""
authors = ["smatsuoka <ms0ae8ti1sj2ui@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
jupytext = "^1.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
